pySCENIC on Martirosyan

--- a/preprocessing/S3b_Martirosyan_pySCENIC_pipeline.ipynb
+++ b/preprocessing/S3b_Martirosyan_pySCENIC_pipeline.ipynb
@@ -39,7 +39,7 @@
     "# import dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import h5py\n",
+    "import polars as pl\n",
     "import pickle\n",
     "import pytz\n",
     "\n",
@@ -524,36 +524,33 @@
    ],
    "source": [
     "# [Input] Fixed gene annotation (for SCENIC feather file compatibility)\n",
-    "genome_data = pd.read_csv(\"./data/fixed_gene_annotation.tsv\", sep = \"\\t\", na_filter=False)\n",
+    "#genome_data = pd.read_csv(\"./data/fixed_gene_annotation.tsv\", sep = \"\\t\", na_filter=False)\n",
     "\n",
-    "# [Input] Loom file to use\n",
-    "f_loom_path_scenic = \"./data/Pan_neuro_integrated.loom\"\n",
-    "# Open Loom file in reading mode\n",
-    "f = h5py.File(f_loom_path_scenic, 'r')\n",
-    "f_m = f[\"/matrix\"][:,:]\n",
-    "f_gene_names = f[\"/row_attrs/Gene\"].asstr()[:]\n",
-    "f_ensembl_names = f[\"/row_attrs/Accession\"].asstr()[:]\n",
-    "f_cell_names = f[\"/col_attrs/CellID\"].asstr()[:]\n",
-    "f.close()\n",
+    "# [Input] Count matrix file to use\n",
+    "EXPRESSION_MTX_FNAME = '/data/gardeux/Neuro_Droso_ND75KD/data/Martirosyan_2024/GSE243639_Filtered_count_table.csv.gz' # From https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE243639\n",
+    "# Open CSV count matrix\n",
+    "f_m = pl.read_csv(EXPRESSION_MTX_FNAME)\n",
+    "f_gene_names = m[:, 0].to_list()  # First column as list of strings\n",
+    "f_cell_names = m.columns[1:]      # Column names (excluding first column)\n",
     "\n",
     "# Update gene names using fixing table\n",
-    "ensembl_to_gene_dict = genome_data.set_index('Ensembl')['Name'].to_dict()\n",
-    "f_gene_names_updated = np.array([\n",
-    "    ensembl_to_gene_dict[ensembl] if ensembl in ensembl_to_gene_dict else gene\n",
-    "    for gene, ensembl in zip(f_gene_names, f_ensembl_names)\n",
-    "])\n",
+    "#ensembl_to_gene_dict = genome_data.set_index('Ensembl')['Name'].to_dict()\n",
+    "#f_gene_names_updated = np.array([\n",
+    "#    ensembl_to_gene_dict[ensembl] if ensembl in ensembl_to_gene_dict else gene\n",
+    "#    for gene, ensembl in zip(f_gene_names, f_ensembl_names)\n",
+    "#])\n",
     "\n",
     "# Create expression matrix\n",
-    "ex_matrix = pd.DataFrame(f_m, columns = f_cell_names, index = f_gene_names_updated)\n",
-    "ex_matrix = ex_matrix.loc[f_gene_names_updated, :]\n",
+    "ex_matrix = pd.DataFrame(f_m[:, 1:], columns = f_cell_names, index = f_gene_names) # Or f_gene_names_updated\n",
+    "#ex_matrix = ex_matrix.loc[f_gene_names_updated, :]\n",
     "\n",
     "# [Input] Transcription factors list (SCENIC step 1: GRNBoost2)\n",
-    "f_tfs = \"./data/FBgg0000745_TF_Flybase.filtered.txt\" # From https://resources.aertslab.org/cistarget/tf_lists/\n",
+    "f_tfs = \"./data/allTFs_hg38.txt\" # From https://resources.aertslab.org/cistarget/tf_lists/\n",
     "# Derive list of Transcription Factors(TF)\n",
     "tf_names = load_tf_names(f_tfs)\n",
     "\n",
     "# [Output] Adjacency matrix (SCENIC step 1: GRNBoost2)\n",
-    "adj_matrix = \"./data/Pan_neuro_integrated_adj.csv\"\n",
+    "adj_matrix = \"./data/Martirosyan_2024/Martirosyan_adj.csv\"\n",
     "\n",
     "# [Input] Ranking databases (SCENIC step 2-3: cisTarget)\n",
     "f_db_names = [\"./data/dm6_v10_clust.genes_vs_motifs.rankings.feather\"] # From pySCENIC db: cistopic_flybase_r6.02/mc_v10_clust/\n",
@@ -563,12 +560,12 @@
     "f_motif_path = \"./data/motifs-v10-nr.flybase-m0.00001-o0.0.tbl\" # From pySCENIC db: cistopic_flybase_r6.02/mc_v10_clust/\n",
     "\n",
     "# [Output] Regulons (SCENIC step 2-3: cisTarget)\n",
-    "f_motifs_path = \"./data/Pan_neuro_integrated_motifs.tsv\"\n",
-    "f_modules_path = \"./data/Pan_neuro_integrated_modules.tsv\"\n",
-    "f_regulons_path = \"./data/Pan_neuro_integrated_regulons.tsv\"\n",
-    "f_regulons_aucell_path = \"./data/Pan_neuro_integrated_regulons_aucell.tsv\"\n",
-    "f_regulons_binarized_aucell_path = \"./data/Pan_neuro_integrated_regulons_aucell_binarized.tsv\"\n",
-    "f_regulons_binarization_thresholds_aucell_path = \"./data/Pan_neuro_integrated_regulons_aucell_binarization_thresholds.tsv\"\n",
+    "f_motifs_path = \"./data/Martirosyan_2024/Martirosyan_motifs.tsv\"\n",
+    "f_modules_path = \"./data/Martirosyan_2024/Martirosyan_modules.tsv\"\n",
+    "f_regulons_path = \"./data/Martirosyan_2024/Martirosyan_regulons.tsv\"\n",
+    "f_regulons_aucell_path = \"./data/Martirosyan_2024/Martirosyan_regulons_aucell.tsv\"\n",
+    "f_regulons_binarized_aucell_path = \"./data/Martirosyan_2024/Martirosyan_regulons_aucell_binarized.tsv\"\n",
+    "f_regulons_binarization_thresholds_aucell_path = \"./data/Martirosyan_2024/Martirosyan_regulons_aucell_binarization_thresholds.tsv\"\n",
     "\n",
     "# Restrict matrix to feather genes\n",
     "ranking_feather = pd.read_feather(f_db_names[0])\n",
